[package]
name = "axum-xml-up"
version = "0.1.0"
edition = "2021"
authors = ["LightQuantum <self@lightquantum.me>", "Jacobtread <jacobtread@gmail.com>"]
description = "XML extractor for axum"
repository = "https://github.com/PhotonQuantum/axum-xml"
readme = "README.md"
license = "MIT"
keywords = ["axum", "xml", "parser", "parsing", "extractor"]
categories = ["parsing", "text-processing", "encoding", "web-programming", "web-programming::http-server"]
exclude = [
    ".github/*",
    ".mergify.yml",
    "rust-toolchain.toml",
    "bacon.toml"
]

[features]
encoding = ["quick-xml/encoding"]

[dependencies]
axum-core = "0.4"
bytes = "1.5"
http = "1"
http-body = "1"
mime = "0.3"
quick-xml = { version = "0.31", features = ["serialize"] }
serde = "1"
thiserror = "1"

[dev-dependencies]
axum = "0.7"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros"] }